# mentodev

./: .env.example  .gitignore  app.py  insertrepos.py  pyproject.toml
classes/: aluno.py
pages/: aluno.py  banco.py  dash.py  inserir_aluno.py  inserir_aluno_artefatos.py  orientador-artefatos.py  orientador-painel.py  orientador.py  painel_notas.py  tabela.py
